tests/read_all/attribute_table_no_name/test.stderr
error: A struct must be annotated with `#[crud_table("table_name")]` to specify the database table
 --> tests/read_all/attribute_table_no_name/test.rs:4:1
  |
4 | / #[crud_table]
5 | | struct Test {
6 | |     #[crud_id]
7 | |     id: i64,
8 | |     name: String,
9 | | }
  | |_^

error[E0599]: no function or associated item named `read_all` found for struct `Test` in the current scope
  --> tests/read_all/attribute_table_no_name/test.rs:16:26
   |
5  | struct Test {
   | ----------- function or associated item `read_all` not found for this struct
...
16 |     let _results = Test::read_all(&pool).await;
   |                          ^^^^^^^^ function or associated item not found in `Test`
